# spectra

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: strategy_benchmark.py
docs/: index.md  quickstart.md
examples/: compare_strategies.py  optimize_pipeline.py  quickstart.py
src/spectra/: __init__.py
src/spectra/chunking/: __init__.py  document_aware.py  fixed.py  recursive.py  semantic.py
src/spectra/dashboard/: __init__.py  app.py
src/spectra/evaluation/: __init__.py  ab_testing.py  metrics.py  ragas.py  synthetic.py
src/spectra/optimization/: __init__.py  optimizer.py  pareto.py  pipeline.py
src/spectra/retrieval/: __init__.py  base.py  chain_of_note.py  colbert.py  dense.py  graph_rag.py  hybrid.py  hyde.py  ircot.py  multi_hop.py  reranker.py  self_rag.py  sparse.py
src/spectra/utils/: __init__.py  embeddings.py  llm.py
src/spectra/vectorstores/: __init__.py  base.py  faiss_store.py  pgvector_store.py  qdrant_store.py
tests/: test_chunking.py  test_evaluation.py  test_optimization.py  test_retrieval.py
